--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings" : {
-    "Default" : "Server=localhost;Database=Medico;User Id=myUsername;Password=myPassword;"
+    "Default" : "Server=localhost\\MSSQLSERVER01;Database=Medico;User Id=userMedico;Password=MedicoPassword!;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
